--- a/WorkWise/Pages/Index.cshtml
+++ b/WorkWise/Pages/Index.cshtml
@@ -5,4 +5,30 @@
 }
 
 
+<html>
+    <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>@ViewData["Title"] - Havrilyak.LNU.WorkWise.Web</title>
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/WorkWise.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/HomePage.css" asp-append-version="true" />
+    </head>
+
+<body>
+       <div class="content">
+            <h1>Find a solution right now</h1>
+            <p>This site will help you find a contractor or employer, choose a direction below</p>
+            <div>
+                <button type="button"><span></span>For Frelancer</button>
+                <button type="button"><span></span>For Employmen</button>
+            </div>
+
+       </div>
+</body>
+<</html>
+
+
+
 
