--- a/WorkWise/wwwroot/css/Shapka.css
+++ b/WorkWise/wwwroot/css/Shapka.css
@@ -1,67 +1,13 @@
-﻿body {
+﻿/*____________________________________________________________________________*/
+
+.my-layout {
+    opacity: 0.1; /* Змінюємо прозорість на 50% */
 }
+
 
 .nav-item {
-    margin-right: 35px;
+    margin-right: 50px;
 }
-
-.button-62 {
-    background-image: radial-gradient(circle at 96.98% 17.11%, #ffdcc2 0, #ffcfbf 16.67%, #ffc1ba 33.33%, #ffb3b3 50%, #e7a5aa 66.67%, #d199a2 83.33%, #be8f9a 100%);
-    border: 0;
-    border-radius: 12px;
-    cursor: pointer;
-    display: inline-block;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 2.5;
-    outline: transparent;
-    padding: 0 1rem;
-    text-align: center;
-    text-decoration: none;
-    transition: box-shadow .2s ease-in-out;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-    white-space: nowrap;
-}
-
-.button-62:not([disabled]):focus {
-    box-shadow: 0 0 .25rem rgba(0, 0, 0, 0.5), -.125rem -.125rem 1rem rgba(239, 71, 101, 0.5), .125rem .125rem 1rem rgba(255, 154, 90, 0.5);
-}
-
-.button-62:not([disabled]):hover {
-    box-shadow: 0 0 .25rem rgba(0, 0, 0, 0.5), -.125rem -.125rem 1rem rgba(239, 71, 101, 0.5), .125rem .125rem 1rem rgba(255, 154, 90, 0.5);
-}
-
-.button-42 {
-    background-image: radial-gradient(circle at 96.98% 17.11%, #ffffb3 0, #ffffb3 12.5%, #efffb2 25%, #dbffb1 37.5%, #c7ffaf 50%, #b5f3ad 62.5%, #a4e7ab 75%, #96ddaa 87.5%, #8ad4a9 100%);
-    border: 0;
-    border-radius: 12px;
-    cursor: pointer;
-    display: inline-block;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 2.5;
-    outline: transparent;
-    padding: 0 1rem;
-    text-align: center;
-    text-decoration: none;
-    transition: box-shadow .2s ease-in-out;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-    white-space: nowrap;
-}
-
-    .button-42:not([disabled]):focus {
-        box-shadow: 0 0 .25rem rgba(0, 0, 0, 0.5), -.125rem -.125rem 1rem rgba(57, 255, 20, 0.5), .125rem .125rem 1rem rgba(57, 255, 20, 0.5);
-    }
-
-    .button-42:not([disabled]):hover {
-        box-shadow: 0 0 .25rem rgba(0, 0, 0, 0.5), -.125rem -.125rem 1rem rgba(57, 255, 20, 0.5), .125rem .125rem 1rem rgba(57, 255, 20, 0.5);
-    }
 
 @font-face {
     font-family: 'Montserrat';
@@ -73,10 +19,177 @@
 .button-17 {
     font-family: 'Montserrat', sans-serif;
 }
-
-.button-18 {
-    margin-left: 200px;
+.navbar-brand {
+    font-family: 'Montserrat', sans-serif;
 }
 
+.button-18 {
+    margin-right: 200px;
+}
+
+
+/*________________________________________________________________________________*/
+
+.button-62 {
+    background-image: linear-gradient(45deg, #FF512F 0%, #F09819 51%, #FF512F 100%)
+}
+
+.button-62 {
+    font-size: 14px;
+    font-family: 'Montserrat', sans-serif;
+    padding: 5px 5px;
+    text-align: center;
+    text-transform: uppercase;
+    transition: 0.5s;
+    background-size: 200% auto;
+    color: white;
+    border-radius: 10px;
+    display: block;
+    border: 0px;
+    box-shadow: 0px 0px 14px -7px #f09819;
+}
+
+.button-62:hover {
+        background-position: right center;
+        /* change the direction of the change here */
+        color: #fff;
+        text-decoration: none;
+    }
+
+.button-62:active {
+ transform: scale(0.95);
+}
+
+.button-42 {
+    background-image: radial-gradient(circle at 9.79% 9.79%, #ffff00 0, #e0ff00 12.5%, #b8ff00 25%, #84ff00 37.5%, #25ff00 50%, #00ef17 62.5%, #00e32f 75%, #00db47 87.5%, #00d861 100%);
+}
+
+.button-42 {
+    font-size: 14px;
+    font-family: 'Montserrat', sans-serif;
+    padding: 5px 5px;
+    text-align: center;
+    text-transform: uppercase;
+    transition: 0.5s;
+    background-size: 200% auto;
+    color: white;
+    border-radius: 10px;
+    display: block;
+    border: 0px;
+    box-shadow: 0px 0px 14px -7px #f09819;
+}
+
+    .button-42:hover {
+        background-position: right center;
+        /* change the direction of the change here */
+        color: #fff;
+        text-decoration: none;
+    }
+
+    .button-42:active {
+        transform: scale(0.95);
+    } 
+/*__________________________________________________________________*/
+
+/* The switch - the box around the slider */
+.switch {
+    --width-of-switch: 3.5em;
+    --height-of-switch: 2em;
+    /* size of sliding icon -- sun and moon */
+    --size-of-icon: 1.4em;
+    /* it is like a inline-padding of switch */
+    --slider-offset: 0.3em;
+    position: relative;
+    width: var(--width-of-switch);
+    height: var(--height-of-switch);
+}
+
+    /* Hide default HTML checkbox */
+    .switch input {
+        opacity: 0;
+        width: 0;
+        height: 0;
+    }
+
+/* The slider */
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #f4f4f5;
+    transition: .4s;
+    border-radius: 30px;
+}
+
+    .slider:before {
+        position: absolute;
+        content: "";
+        height: var(--size-of-icon,1.4em);
+        width: var(--size-of-icon,1.4em);
+        border-radius: 20px;
+        left: var(--slider-offset,0.3em);
+        top: 50%;
+        transform: translateY(-50%);
+        background: linear-gradient(40deg,#ff0080,#ff8c00 70%);
+        transition: .4s;
+    }
+
+input:checked + .slider {
+    background-color: #303136;
+}
+
+    input:checked + .slider:before {
+        left: calc(100% - (var(--size-of-icon,1.4em) + var(--slider-offset,0.3em)));
+        background: #303136;
+        /* change the value of second inset in box-shadow to change the angle and direction of the moon  */
+        box-shadow: inset -3px -2px 5px -2px #8983f7, inset -10px -4px 0 0 #a3dafb;
+    }
+
+/*-------------------------------------------------------------*/
+/*
+.navbar {
+    width: 85%;
+    margin: auto;
+    padding: 35px 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+*/
+.logo {
+    width: 120px;
+    cursor: pointer;
+    margin-right: 200px;
+}
+
+.navbar ul li {
+    list-style: none;
+    display: inline-block;
+    position: relative;
+}
+
+.navbar ul li a {
+    text-decoration: none;
+    color: #fff;
+    text-transform: uppercase;
+}
+
+.navbar ul li::after {
+    content: '';
+    height: 3px;
+    width: 0%;
+    background: #303136;
+    position: absolute;
+    left: 0;
+    bottom: -10px;
+    transition: 0.5s;
+}
+.navbar ul li:hover::after{
+    width: 100%;
+
+}
 
 
