--- a/WorkWise/wwwroot/css/HomePage.css
+++ b/WorkWise/wwwroot/css/HomePage.css
@@ -8,19 +8,20 @@
 body {
     width: 100%;
     height: 100vh;
-    background-image: linear-gradient(rgba(0,0,0,0.75), rgba(0,0,0,0.75)), url('../image/image_homepage/pexels-vlada-karpovich-4050315.png');
+    background: linear-gradient(130deg, #5d66ff 0, #9257ff 3.85%, #b544ff 7.69%, #d129ed 11.54%, #e700d9 15.38%, #f700c3 19.23%, #ff00ad 23.08%, #ff0096 26.92%, #ff007f 30.77%, #ff0068 34.62%, #ff0052 38.46%, #ff003c 42.31%, #ff0024 46.15%, #ff0000 50%, #f43000 53.85%, #e74600 57.69%, #d95600 61.54%, #c96400 65.38%, #b86f00 69.23%, #a67800 73.08%, #928000 76.92%, #7d8700 80.77%, #658c00 84.62%, #489100 88.46%, #169500 92.31%, #009800 96.15%, #009a00 100%);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     height: auto;
 }
 
-.content{
+.content {
+    margin-top: 350px;
     width: 100%;
-    position: absolute;
+    position: center;
     top: 50%;
     transform: translateY(-50%);
-    text-align: center; 
+    text-align: center;
     color: #fff;
 }
 
