--- a/WorkWise/wwwroot/css/Shapka.css
+++ b/WorkWise/wwwroot/css/Shapka.css
@@ -24,158 +24,33 @@
 }
 
 .button-18 {
-    margin-right: 200px;
+    margin-right: 50px;
 }
 
 
 /*________________________________________________________________________________*/
 
-.button-62 {
-    background-image: linear-gradient(45deg, #FF512F 0%, #F09819 51%, #FF512F 100%)
-}
 
-.button-62 {
-    font-size: 14px;
-    font-family: 'Montserrat', sans-serif;
-    padding: 5px 5px;
-    text-align: center;
-    text-transform: uppercase;
-    transition: 0.5s;
-    background-size: 200% auto;
-    color: white;
-    border-radius: 10px;
-    display: block;
-    border: 0px;
-    box-shadow: 0px 0px 14px -7px #f09819;
-}
 
-.button-62:hover {
-        background-position: right center;
-        /* change the direction of the change here */
-        color: #fff;
-        text-decoration: none;
-    }
 
-.button-62:active {
- transform: scale(0.95);
-}
-
-.button-42 {
-    background-image: radial-gradient(circle at 9.79% 9.79%, #ffff00 0, #e0ff00 12.5%, #b8ff00 25%, #84ff00 37.5%, #25ff00 50%, #00ef17 62.5%, #00e32f 75%, #00db47 87.5%, #00d861 100%);
-}
-
-.button-42 {
-    font-size: 14px;
-    font-family: 'Montserrat', sans-serif;
-    padding: 5px 5px;
-    text-align: center;
-    text-transform: uppercase;
-    transition: 0.5s;
-    background-size: 200% auto;
-    color: white;
-    border-radius: 10px;
-    display: block;
-    border: 0px;
-    box-shadow: 0px 0px 14px -7px #f09819;
-}
-
-    .button-42:hover {
-        background-position: right center;
-        /* change the direction of the change here */
-        color: #fff;
-        text-decoration: none;
-    }
-
-    .button-42:active {
-        transform: scale(0.95);
-    } 
-/*__________________________________________________________________*/
-
-/* The switch - the box around the slider */
-.switch {
-    --width-of-switch: 3.5em;
-    --height-of-switch: 2em;
-    /* size of sliding icon -- sun and moon */
-    --size-of-icon: 1.4em;
-    /* it is like a inline-padding of switch */
-    --slider-offset: 0.3em;
-    position: relative;
-    width: var(--width-of-switch);
-    height: var(--height-of-switch);
-}
-
-    /* Hide default HTML checkbox */
-    .switch input {
-        opacity: 0;
-        width: 0;
-        height: 0;
-    }
-
-/* The slider */
-.slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #f4f4f5;
-    transition: .4s;
-    border-radius: 30px;
-}
-
-    .slider:before {
-        position: absolute;
-        content: "";
-        height: var(--size-of-icon,1.4em);
-        width: var(--size-of-icon,1.4em);
-        border-radius: 20px;
-        left: var(--slider-offset,0.3em);
-        top: 50%;
-        transform: translateY(-50%);
-        background: linear-gradient(40deg,#ff0080,#ff8c00 70%);
-        transition: .4s;
-    }
-
-input:checked + .slider {
-    background-color: #303136;
-}
-
-    input:checked + .slider:before {
-        left: calc(100% - (var(--size-of-icon,1.4em) + var(--slider-offset,0.3em)));
-        background: #303136;
-        /* change the value of second inset in box-shadow to change the angle and direction of the moon  */
-        box-shadow: inset -3px -2px 5px -2px #8983f7, inset -10px -4px 0 0 #a3dafb;
-    }
-
-/*-------------------------------------------------------------*/
-/*
-.navbar {
-    width: 85%;
-    margin: auto;
-    padding: 35px 0;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-*/
 .logo {
     width: 120px;
     cursor: pointer;
-    margin-right: 200px;
+    margin-right: 250px;
 }
 
 .navbar ul li {
+    
     list-style: none;
     display: inline-block;
     position: relative;
 }
 
-.navbar ul li a {
-    text-decoration: none;
-    color: #fff;
-    text-transform: uppercase;
-}
+    .navbar ul li a {
+        text-decoration: none;
+        color: #082c5b;
+        text-transform: uppercase;
+    }
 
 .navbar ul li::after {
     content: '';
@@ -191,5 +66,8 @@ input:checked + .slider {
     width: 100%;
 
 }
+
+
+
 
 
