--- a/WorkWise/Pages/SignIn.cshtml
+++ b/WorkWise/Pages/SignIn.cshtml
@@ -19,14 +19,14 @@
         <h1>Login</h1>
         <form method="post">
             <div class="txt_field">
-                <input type="text" required>
+                <input type="text" id="name" name="name" required>
                 <span></span>
-                <label>Name</label>
+                <label for="name">Name:</label>
             </div>
             <div class="txt_field">
-                <input type="password" required>
+                <input type="password" id="email" name="email" required>
                 <span></span>
-                <label>Email</label>
+                <label for="email">Email:</label>
             </div>
             <div class="pass">Forgot Password?</div>
             <input type="submit" value="Login">
