Add frontend to About Page

--- a/WorkWise/Pages/Privacy.cshtml
+++ b/WorkWise/Pages/Privacy.cshtml
@@ -12,18 +12,39 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/WorkWise.styles.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/css/HomePage.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/about.css" asp-append-version="true" />
+
 </head>
 <body>
-        <div>
-            <h1>Info and Feadback</h1>
-        <p>
-            WorkWise is a modern online service ordering platform that helps clients find the best freelancers and make mutually beneficial deals. The exchange is designed to bring together talented professionals from various industries and provide them with the opportunity to receive a stable flow of orders.
-            On WorkWise, freelancers can create their profiles, add portfolios and bid their services. Clients, on the other hand, can view profiles of specialists, contact them, discuss details and make payment for work.
-            WorkWise offers several options for cooperation: clients can order services based on a fixed price or use an auction system. In addition, for the convenience of clients and freelancers, the exchange has implemented such additional functions as a message system for discussing projects, a calendar for planning work, as well as tools for tracking progress and evaluating the quality of completed work.
-            Due to its ease of use and large number of features, WorkWise has become one of the most popular platforms for freelancing.
-        </p>
-        </div>
+        <section class="about">
+            <div class="main">
+                <img src="/image/image_about/About1.png"/>
+                <div class="about-text">
+                    <h1>About Us</h1>
+                    <h5>About WorkWise</h5>
+                <p>
+                    WorkWise is a platform for freelancers and clients that allows them to find one and interact by posting projects and offers on them.
+                    Users can create profiles, add portfolios and describe their skills to attract the attention of customers.
+                    The rating and feedback system allows customers and freelancers to mutually evaluate each other and ensures high quality of project execution.
+                    In addition, on WorkWise there is an opportunity to communicate between customers and freelancers, discuss projects and solve issues in real time.
+                </p>
+                    <h5>About  me</h5>
+                <p>First Name: Ruslan</p>
+                <p>Last Name: Havrilyak</p>
+                <p>Project: WorkWise</p>
+                <p>
+                    Telegram:
+                    <a href="https://t.me/a_le_mong">@@a_le_mong</a>
+                </p>
+                <p>Email: game.master.kvx@gmail.com</p>
+                <p>
+                    Git Repository:
+                    <a href="https://github.com/Gavruk12345/Havrilyak.University.WorkWise">@@my_repositories</a>
+                </p>
+                <button onclick="window.location.href='/Index'" type="button">Go home</button>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
 
