--- a/WorkWise/wwwroot/css/HomePage.css
+++ b/WorkWise/wwwroot/css/HomePage.css
@@ -8,7 +8,7 @@
 body {
     width: 100%;
     height: 100vh;
-    background: linear-gradient(130deg, #5d66ff 0, #9257ff 3.85%, #b544ff 7.69%, #d129ed 11.54%, #e700d9 15.38%, #f700c3 19.23%, #ff00ad 23.08%, #ff0096 26.92%, #ff007f 30.77%, #ff0068 34.62%, #ff0052 38.46%, #ff003c 42.31%, #ff0024 46.15%, #ff0000 50%, #f43000 53.85%, #e74600 57.69%, #d95600 61.54%, #c96400 65.38%, #b86f00 69.23%, #a67800 73.08%, #928000 76.92%, #7d8700 80.77%, #658c00 84.62%, #489100 88.46%, #169500 92.31%, #009800 96.15%, #009a00 100%);
+    background-image: radial-gradient(circle at 100.64% 50%, #0056cf 0, #0055da 6.25%, #0053e1 12.5%, #004fe5 18.75%, #004ae5 25%, #0043e2 31.25%, #0039db 37.5%, #002ad1 43.75%, #0f0fc4 50%, #5900b4 56.25%, #7900a3 62.5%, #90008f 68.75%, #a0007b 75%, #ab0066 81.25%, #b20051 87.5%, #b6003c 93.75%, #b60029 100%);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
