Frontend for Employers catalog

--- a/WorkWise/Pages/Shared/_Layout.cshtml
+++ b/WorkWise/Pages/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                                 <a class="nav-link text-dark button-17 positioned hover-underline-animation cta" asp-area="" asp-page="/Index">Havrilyak.LNU.WorkWise.Web</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark button-17 positioned hover-underline-animation cta" asp-area="" asp-page="/SearchForEmployers">Employers</a>
+                                <a class="nav-link text-dark button-17 positioned hover-underline-animation cta" asp-area="" asp-page="/SearchForEmployer">Employers</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark button-17 positioned" asp-area="" asp-page="/SearchForFreelancers">Freelancers</a>
