Edit catalog eployers

--- a/WorkWise/Pages/SearchForEmployer.cshtml
+++ b/WorkWise/Pages/SearchForEmployer.cshtml
@@ -19,7 +19,7 @@
         <div class="row">
             <div class="col">
                 <h1>Employers</h1>
-            <p>Search talant for freelancers.</p>
+            <p>Search talant for Employers.</p>
             <button onclick="window.location.href='/SearchForFreelancers'" type="button">Go to Freelancer</button>
             </div>
             <div class="col">
