--- a/WorkWise/Pages/Shared/_Layout.cshtml
+++ b/WorkWise/Pages/Shared/_Layout.cshtml
@@ -33,10 +33,10 @@
                                 <a class="nav-link text-dark button-17 positioned" asp-area="" asp-page="/Privacy">Info and Feedback</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark button-17 " asp-area="" asp-page="/Registration">Registration</a>
+                                <a class="nav-link text-dark button-17 " asp-area="" asp-page="/SingUP">Sign up</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark button-17 " asp-area="" asp-page="/SignIn">Sign in</a>
+                                <a class="nav-link text-dark button-17 " asp-area="" asp-page="/SingIN">Sign in</a>
                             </li>
                         </ul>
                    </div>                                   
