Add registration page + frontend

--- a/WorkWise/Pages/SingUP.cshtml
+++ b/WorkWise/Pages/SingUP.cshtml
@@ -15,9 +15,12 @@
         <link rel="stylesheet" href="~/css/Registration.css" asp-append-version="true" />
 </head>
 
+
+
 <body>
-  <div class="container">
-    <div class="title">Registration</div>
+   
+  <div class="mainteiner">
+    <div class="title">Sign Up</div>
     <div class="content">
       <form action="#">
         <div class="user-details">
