--- a/WorkWise/Pages/SingUP.cshtml
+++ b/WorkWise/Pages/SingUP.cshtml
@@ -25,15 +25,15 @@
       <form action="#">
         <div class="user-details">
           <div class="input-box">
-            <span class="details">Full Name</span>
-            <input type="text" placeholder="Enter your name" required>
+            <span class="details">First Name*</span>
+            <input type="text" placeholder="Enter your first name" required>
           </div>
           <div class="input-box">
-            <span class="details">Username</span>
-            <input type="text" placeholder="Enter your username" required>
+            <span class="details">Last Name*</span>
+            <input type="text" placeholder="Enter your last name" required>
           </div>
           <div class="input-box">
-            <span class="details">Email</span>
+            <span class="details">Email*</span>
             <input type="text" placeholder="Enter your email" required>
           </div>
           <div class="input-box">
@@ -41,11 +41,11 @@
             <input type="text" placeholder="Enter your number" required>
           </div>
           <div class="input-box">
-            <span class="details">Password</span>
+            <span class="details">Password*</span>
             <input type="text" placeholder="Enter your password" required>
           </div>
           <div class="input-box">
-            <span class="details">Confirm Password</span>
+            <span class="details">Confirm Password*</span>
             <input type="text" placeholder="Confirm your password" required>
           </div>
         </div>
@@ -72,6 +72,13 @@
         <div class="button">
           <input type="submit" value="Register">
         </div>
+                <div class="signup">
+                    <span class="signup">
+                         Have an account?
+                        <a href="/SingIN">SignUp</a>
+
+                    </span>
+                </div>
       </form>
     </div>
   </div>
