Update backend for registration

--- a/WorkWise/Pages/Index.cshtml
+++ b/WorkWise/Pages/Index.cshtml
@@ -28,7 +28,7 @@
 
 
          <div class="content active">
-            <h1>WorkWise.<br><span>Programming</span></h1>
+            <h1>WorkWise.<br><span>Kurva maty</span></h1>
             <p>A freelance programmer on the exchange is a person who works on programming projects for a fee, usually using a means of remote communication, which provides the opportunity to collaborate with clients from all over the world and work at a time that is convenient for them.</p>
             <a href="#">Go to</a>
          </div>
