--- a/WorkWise/Pages/SingIN.cshtml
+++ b/WorkWise/Pages/SingIN.cshtml
@@ -32,6 +32,12 @@
                     <a href="/SingUP">Login</a>
                     </span>
                 </div>
+                <div class="signup">
+                    <span class="signup">
+                        Go to cabinet
+                    <a href="/Kabinet">Cabinet</a>
+                    </span>
+                </div>
             </div>
         </div>
 </body>
