--- a/WorkWise/Pages/Kabinet.cshtml
+++ b/WorkWise/Pages/Kabinet.cshtml
@@ -5,195 +5,275 @@
 
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Havrilyak.LNU.WorkWise.Web</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/WorkWise.styles.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/css/Cabinet.css" asp-append-version="true" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
-    <!----======== CSS ======== -->
-    <link rel="stylesheet" href="style.css">
-
-    <!----===== Iconscout CSS ===== -->
-    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
-
-    <!--<title>Admin Dashboard Panel</title>-->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1">
+    <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/lykmapipo/themify-icons@0.1.2/css/themify-icons.css">
+    <link rel="stylesheet" href="/css/Kabinet.css">
 </head>
 <body>
-    <nav>
-        <div class="logo-name">
-            <div class="logo-image">
-                <!--<img src="images/logo.png" alt="">-->
-            </div>
 
-            <span class="logo_name">CodingLab</span>
+    <input type="checkbox" id="sidebar-toggle">
+    <div class="sidebar">
+        <div class="sidebar-header">
+            <h3 class="brand">
+                <span class="ti-unlink"></span>
+                <span>easywire</span>
+            </h3>
+            <label for="sidebar-toggle" class="ti-menu-alt"></label>
         </div>
 
-        <div class="menu-items">
-            <ul class="nav-links">
+        <div class="sidebar-menu">
+            <ul>
                 <li>
-                    <a href="#">
-                        <i class="uil uil-estate"></i>
-                        <span class="link-name">Dahsboard</span>
+                    <a href="">
+                        <span class="ti-home"></span>
+                        <span>Home</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
-                        <i class="uil uil-files-landscapes"></i>
-                        <span class="link-name">Content</span>
+                    <a href="">
+                        <span class="ti-face-smile"></span>
+                        <span>Team</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
-                        <i class="uil uil-chart"></i>
-                        <span class="link-name">Analytics</span>
+                    <a href="">
+                        <span class="ti-agenda"></span>
+                        <span>Tasks</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
-                        <i class="uil uil-thumbs-up"></i>
-                        <span class="link-name">Like</span>
+                    <a href="">
+                        <span class="ti-clipboard"></span>
+                        <span>Leaves</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
-                        <i class="uil uil-comments"></i>
-                        <span class="link-name">Comment</span>
+                    <a href="">
+                        <span class="ti-folder"></span>
+                        <span>Projects</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
-                        <i class="uil uil-share"></i>
-                        <span class="link-name">Share</span>
+                    <a href="">
+                        <span class="ti-time"></span>
+                        <span>Timesheet</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <span class="ti-book"></span>
+                        <span>Contacts</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <span class="ti-settings"></span>
+                        <span>Account</span>
                     </a>
                 </li>
             </ul>
-
-            <ul class="logout-mode">
-                <li>
-                    <a href="#">
-                        <i class="uil uil-signout"></i>
-                        <span class="link-name">Logout</span>
-                    </a>
-                </li>
-
-                <li class="mode">
-                    <a href="#">
-                        <i class="uil uil-moon"></i>
-                        <span class="link-name">Dark Mode</span>
-                    </a>
-
-                    <div class="mode-toggle">
-                        <span class="switch"></span>
-                    </div>
-                </li>
-            </ul>
         </div>
-    </nav>
+    </div>
 
-    <section class="dashboard">
-        <div class="top">
-            <i class="uil uil-bars sidebar-toggle"></i>
 
-            <div class="search-box">
-                <i class="uil uil-search"></i>
-                <input type="text" placeholder="Search here...">
+    <div class="main-content">
+
+        <header>
+            <div class="search-wrapper">
+                <span class="ti-search"></span>
+                <input type="search" placeholder="Search">
             </div>
 
-            <!--<img src="images/profile.jpg" alt="">-->
-        </div>
-
-        <div class="dash-content">
-            <div class="overview">
-                <div class="title">
-                    <i class="uil uil-tachometer-fast-alt"></i>
-                    <span class="text">Dashboard</span>
-                </div>
-
-                <div class="boxes">
-                    <div class="box box1">
-                        <i class="uil uil-thumbs-up"></i>
-                        <span class="text"></span>
-                        <span class="number"></span>
-                    </div>
-                    <div class="box box2">
-                        <i class="uil uil-comments"></i>
-                        <span class="text"></span>
-                        <span class="number"></span>
-                    </div>
-                    <div class="box box3">
-                        <i class="uil uil-share"></i>
-                        <span class="text"></span>
-                        <span class="number"></span>
-                    </div>
-                </div>
+            <div class="social-icons">
+                <span class="ti-bell"></span>
+                <span class="ti-comment"></span>
+                <div></div>
             </div>
+        </header>
 
-            <div class="activity">
-                <div class="title">
-                    <i class="uil uil-clock-three"></i>
-                    <span class="text">Recent Activity</span>
+        <main>
+
+            <h2 class="dash-title">Overview</h2>
+
+            <div class="dash-cards">
+                <div class="card-single">
+                    <div class="card-body">
+                        <span class="ti-briefcase"></span>
+                        <div>
+                            <h5>Account Balance</h5>
+                            <h4>$30,659.45</h4>
+                        </div>
+                    </div>
+                    <div class="card-footer">
+                        <a href="">View all</a>
+                    </div>
                 </div>
 
-                <div class="activity-data">
-                    <div class="data names">
-                        <span class="data-title">Name</span>
-                        <span class="data-list"></span>
-                        <span class="data-list"> </span>
-                        <span class="data-list"> </span>
-                        <span class="data-list"> </span>
-                        <span class="data-list"> </span>
-                        <span class="data-list"> </span>
-                        <span class="data-list"> </span>
+                <div class="card-single">
+                    <div class="card-body">
+                        <span class="ti-reload"></span>
+                        <div>
+                            <h5>Pending</h5>
+                            <h4>$19,500.45</h4>
+                        </div>
                     </div>
-                    <div class="data email">
-                        <span class="data-title">Email</span>
-                        <span class="data-list"></span>
-                        <span class="data-list"></span>
-                        <span class="data-list"></span>
-                        <span class="data-list"></span>
-                        <span class="data-list"></span>
-                        <span class="data-list"></span>
-                        <span class="data-list"></span>
+                    <div class="card-footer">
+                        <a href="">View all</a>
                     </div>
-                    <div class="data joined">
-                        <span class="data-title">Joined</span>
-                        <span class="data-list"></span>
-                        <span class="data-list"></span>
-                        <span class="data-list"></span>
-                        <span class="data-list"></span>
-                        <span class="data-list"></span>
-                        <span class="data-list"></span>
-                        <span class="data-list"></span>
+                </div>
+
+                <div class="card-single">
+                    <div class="card-body">
+                        <span class="ti-check-box"></span>
+                        <div>
+                            <h5>Processed</h5>
+                            <h4>$20,659</h4>
+                        </div>
                     </div>
-                    <div class="data type">
-                        <span class="data-title">Type</span>
-                        <span class="data-list"></span>
-                        <span class="data-list"></span>
-                        <span class="data-list"></span>
-                        <span class="data-list"></span>
-                        <span class="data-list"></span>
-                        <span class="data-list"></span>
-                        <span class="data-list"></span>
-                    </div>
-                    <div class="data status">
-                        <span class="data-title">Status</span>
-                        <span class="data-list"></span>
-                        <span class="data-list"></span>
-                        <span class="data-list"></span>
-                        <span class="data-list"></span>
-                        <span class="data-list"></span>
-                        <span class="data-list"></span>
-                        <span class="data-list"></span>
+                    <div class="card-footer">
+                        <a href="">View all</a>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
 
-    <!--<script src="script.js"></script>-->
+
+            <section class="recent">
+                <div class="activity-grid">
+                    <div class="activity-card">
+                        <h3>Recent activity</h3>
+
+                        <div class="table-responsive">
+                            <table>
+                                <thead>
+                                    <tr>
+                                        <th>Project</th>
+                                        <th>Start Date</th>
+                                        <th>End Date</th>
+                                        <th>Team</th>
+                                        <th>Status</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>App Development</td>
+                                        <td>15 Aug, 2020</td>
+                                        <td>22 Aug, 2020</td>
+                                        <td class="td-team">
+                                            <div class="img-1"></div>
+                                            <div class="img-2"></div>
+                                            <div class="img-3"></div>
+                                        </td>
+                                        <td>
+                                            <span class="badge success">Success</span>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>Logo Design</td>
+                                        <td>15 Aug, 2020</td>
+                                        <td>22 Aug, 2020</td>
+                                        <td class="td-team">
+                                            <div class="img-1"></div>
+                                            <div class="img-2"></div>
+                                            <div class="img-3"></div>
+                                        </td>
+                                        <td>
+                                            <span class="badge warning">Processing</span>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>Server setup</td>
+                                        <td>15 Aug, 2020</td>
+                                        <td>22 Aug, 2020</td>
+                                        <td class="td-team">
+                                            <div class="img-1"></div>
+                                            <div class="img-2"></div>
+                                            <div class="img-3"></div>
+                                        </td>
+                                        <td>
+                                            <span class="badge success">Success</span>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>Front-end Design</td>
+                                        <td>15 Aug, 2020</td>
+                                        <td>22 Aug, 2020</td>
+                                        <td class="td-team">
+                                            <div class="img-1"></div>
+                                            <div class="img-2"></div>
+                                            <div class="img-3"></div>
+                                        </td>
+                                        <td>
+                                            <span class="badge warning">Processing</span>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>Web Development</td>
+                                        <td>15 Aug, 2020</td>
+                                        <td>22 Aug, 2020</td>
+                                        <td class="td-team">
+                                            <div class="img-1"></div>
+                                            <div class="img-2"></div>
+                                            <div class="img-3"></div>
+                                        </td>
+                                        <td>
+                                            <span class="badge success">Success</span>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+
+                    <div class="summary">
+                        <div class="summary-card">
+                            <div class="summary-single">
+                                <span class="ti-id-badge"></span>
+                                <div>
+                                    <h5>196</h5>
+                                    <small>Number of staff</small>
+                                </div>
+                            </div>
+                            <div class="summary-single">
+                                <span class="ti-calendar"></span>
+                                <div>
+                                    <h5>16</h5>
+                                    <small>Number of leave</small>
+                                </div>
+                            </div>
+                            <div class="summary-single">
+                                <span class="ti-face-smile"></span>
+                                <div>
+                                    <h5>12</h5>
+                                    <small>Profile update request</small>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="bday-card">
+                            <div class="bday-flex">
+                                <div class="bday-img"></div>
+                                <div class="bday-info">
+                                    <h5>Dwayne F. Sanders</h5>
+                                    <small>Birthday Today</small>
+                                </div>
+                            </div>
+
+                            <div class="text-center">
+                                <button>
+                                    <span class="ti-gift"></span>
+                                    Wish him
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+        </main>
+
+    </div>
+
 </body>
 </html>
